--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@dnd-kit/core": "^6.1.0",
     "@radix-ui/react-slider": "^1.3.5",
+    "@radix-ui/themes": "^3.2.1",
     "@tailwindcss/vite": "^4.1.3",
     "@xola/icons": "^1.1.6",
     "ahooks": "^3.9.0",
