--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@dnd-kit/core": "^6.1.0",
     "@radix-ui/themes": "^3.2.1",
     "@tailwindcss/vite": "^4.1.3",
+    "@vercel/analytics": "^1.5.0",
     "@xola/icons": "^1.1.6",
     "clsx": "^2.1.1",
     "lodash-es": "^4.17.21",
