--- a/package.json
+++ b/package.json
@@ -1,61 +1,62 @@
 {
-  "name": "css-grid-generator",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "format": "prettier --write -l src",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "@dnd-kit/core": "^6.1.0",
-    "@radix-ui/themes": "^3.2.1",
-    "@tailwindcss/vite": "^4.1.3",
-    "@vercel/analytics": "^1.5.0",
-    "@vercel/speed-insights": "^1.2.0",
-    "@xola/icons": "^1.1.6",
-    "clsx": "^2.1.1",
-    "lodash-es": "^4.17.21",
-    "prism-react-renderer": "^2.3.1",
-    "radix-ui": "^1.4.2",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "tailwind-merge": "^3.3.1",
-    "tailwindcss": "^4.1.11",
-    "vite-tsconfig-paths": "^5.1.4"
-  },
-  "devDependencies": {
-    "@ianvs/prettier-plugin-sort-imports": "^4.5.1",
-    "@types/lodash-es": "^4.17.12",
-    "@types/node": "^20",
-    "@types/react": "^18.3.18",
-    "@types/react-dom": "^18.3.5",
-    "prettier": "^3.6.2",
-    "prettier-plugin-tailwindcss": "^0.6.11",
-    "typescript": "^5.2.2",
-    "vite": "^6.2.2",
-    "vite-tsconfig-paths": "^5.1.4"
-  },
-  "prettier": {
-    "semi": true,
-    "printWidth": 120,
-    "trailingComma": "all",
-    "singleQuote": false,
-    "bracketSpacing": true,
-    "useTabs": false,
-    "arrowParens": "always",
-    "bracketSameLine": false,
-    "tabWidth": 4,
-    "importOrder": [
-      "^[./]",
-      "^@/(.*)$"
-    ],
-    "plugins": [
-      "@ianvs/prettier-plugin-sort-imports",
-      "prettier-plugin-tailwindcss"
-    ]
-  }
+    "name": "css-grid-generator",
+    "private": true,
+    "version": "0.0.0",
+    "type": "module",
+    "scripts": {
+        "dev": "vite",
+        "build": "tsc && vite build",
+        "format": "prettier --write -l src",
+        "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+        "preview": "vite preview"
+    },
+    "dependencies": {
+        "@dnd-kit/core": "^6.1.0",
+        "@radix-ui/themes": "^3.2.1",
+        "@tailwindcss/vite": "^4.1.3",
+        "@vercel/analytics": "^1.5.0",
+        "@vercel/speed-insights": "^1.2.0",
+        "@xola/icons": "^1.1.6",
+        "clsx": "^2.1.1",
+        "lodash-es": "^4.17.21",
+        "posthog-js": "^1.258.5",
+        "prism-react-renderer": "^2.3.1",
+        "radix-ui": "^1.4.2",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "tailwind-merge": "^3.3.1",
+        "tailwindcss": "^4.1.11",
+        "vite-tsconfig-paths": "^5.1.4"
+    },
+    "devDependencies": {
+        "@ianvs/prettier-plugin-sort-imports": "^4.5.1",
+        "@types/lodash-es": "^4.17.12",
+        "@types/node": "^20",
+        "@types/react": "^18.3.18",
+        "@types/react-dom": "^18.3.5",
+        "prettier": "^3.6.2",
+        "prettier-plugin-tailwindcss": "^0.6.11",
+        "typescript": "^5.2.2",
+        "vite": "^6.2.2",
+        "vite-tsconfig-paths": "^5.1.4"
+    },
+    "prettier": {
+        "semi": true,
+        "printWidth": 120,
+        "trailingComma": "all",
+        "singleQuote": false,
+        "bracketSpacing": true,
+        "useTabs": false,
+        "arrowParens": "always",
+        "bracketSameLine": false,
+        "tabWidth": 4,
+        "importOrder": [
+            "^[./]",
+            "^@/(.*)$"
+        ],
+        "plugins": [
+            "@ianvs/prettier-plugin-sort-imports",
+            "prettier-plugin-tailwindcss"
+        ]
+    }
 }
