--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "react-dom": "^18.2.0",
         "tailwind-merge": "^3.3.1",
         "tailwindcss": "^4.1.11",
+        "tailwindcss-debug-screens": "^3.0.1",
         "vite-tsconfig-paths": "^5.1.4"
     },
     "devDependencies": {
