--- a/package.json
+++ b/package.json
@@ -24,8 +24,12 @@
         "radix-ui": "^1.4.2",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-grid-layout": "^1.5.2",
+        "react-grid-overlay": "^1.0.3",
+        "react-resizable": "^3.0.5",
         "tailwind-merge": "^3.3.1",
         "tailwindcss": "^4.1.11",
+        "tailwindcss-debug-screens": "^3.0.1",
         "vite-tsconfig-paths": "^5.1.4"
     },
     "devDependencies": {
@@ -34,6 +38,7 @@
         "@types/node": "^20",
         "@types/react": "^18.3.18",
         "@types/react-dom": "^18.3.5",
+        "@types/react-grid-layout": "^1.3.5",
         "prettier": "^3.6.2",
         "prettier-plugin-tailwindcss": "^0.6.11",
         "typescript": "^5.2.2",
