--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "radix-ui": "^1.4.2",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-grid-layout": "^1.5.2",
         "tailwind-merge": "^3.3.1",
         "tailwindcss": "^4.1.11",
         "tailwindcss-debug-screens": "^3.0.1",
@@ -35,6 +36,7 @@
         "@types/node": "^20",
         "@types/react": "^18.3.18",
         "@types/react-dom": "^18.3.5",
+        "@types/react-grid-layout": "^1.3.5",
         "prettier": "^3.6.2",
         "prettier-plugin-tailwindcss": "^0.6.11",
         "typescript": "^5.2.2",
