--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-grid-layout": "^1.5.2",
+        "react-grid-overlay": "^1.0.3",
         "react-resizable": "^3.0.5",
         "tailwind-merge": "^3.3.1",
         "tailwindcss": "^4.1.11",
